@@ -48,6 +48,7 @@ confirm_actions, boolean, 1
 printer, boolean, 0
 statusbar, boolean, 1
 interface2, boolean, 1
+snaps_as_z80, boolean, 0
 
 sound_device, string, NULL, 'd'
 sound, boolean, 1
